     a command to this hotkey. Also accept sequence of commands ("this; that").
   * Add a command "alias <name>[=<command>]". To set or show shorter alias to
     a command. Also accept incomplete command and pass parameters (ex: "alias
     hp=unit hitpoints", then use "hp 100")
   * Add a filter text box for the "Create Unit" dialog
   * Fixed chatlog not to so lobby joins if set in preferences
   * Also highlight the fog under the mouse (not just the terrain)
   * Add-ons download dialog:
     * The class of each add-on is displayed in the downloads dialog
     * It is possible to filter what add-ons are displayed by text (matching
       against any of the information fields)
 * WML engine:
   * titlescreen is now randomly loaded
   * removeitem now can take an image key so that overlays can be removed one at
     a time. (patch #1067)
   * fix [teleport] capturing villages with the wrong side (bug #11683)
   * SideWML recruit= no longer locks the faction except if explicitely wanted
     with the new key faction_from_recruit=yes
   * add "default_base" parameter to overlay terrains, which specifies the 
     base terrain the editor draws by default.
   * New [heal_unit] action.
   * Make it possible to change base and overlay separately in [terrain] and
    [terrain_mask] actions.
   * rename the "hides" status as "hidden"
   * add a new image path function : GS to greyscale the image
   * [store_map_dimensions] also stores map border size now.
   * renamed old [attacks] special to [swarm]
   * created [attacks] special with expected behaviour and usage similar to
	 [damage] special
 * wesnothd
   * added selective ping support - saves server bandwidth
   * updated pings to use new simple_wml
   * pings now sent using raw method to they only get compressed once for batch
   * added expiration time to bans
   * added restart command to server that does graceful restart
   * added option to do graceful shut down for server
 * campaignd