@@ -1,0 +1,3 @@
+motd="Welcome to wesnoth lan server! This server will automaticaly shutdown after all players have left."
+versions_accepted="*"
+lan_server="60"
